--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10928,3 +10928,24 @@ a.text-dark:focus {
   }
 }
 
+p {
+  font-size: 16px;
+}
+
+i {
+  display: block;
+  font-size: 12px;
+}
+
+strong {
+  font-weight: bold;
+  color: #3490dc;
+  font-size: 18px;
+}
+
+.content_content {
+  background: #F2F3F5;
+  padding: 20px;
+  border-radius: 10px;
+}
+
